--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-string-replace": "^0.4.4",
     "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
